# AoC-2023

day1/: Makefile
day1/.cache/clangd/index/: funciones.cpp.E3070AEA4D516561.idx  funciones.hpp.06B36B2886483E73.idx  part1.cpp.63EF5568D048A6BE.idx  part2.cpp.E35D59E2BA0D4374.idx  test.cpp.0DB4B202FDBED418.idx  test.cpp.62F6963B1B435F66.idx
day1/include/: funciones.hpp
day1/src/: funciones.cpp  part1.cpp  part2.cpp  test.cpp
day11/: day11.py
day2/: Makefile
day2/.cache/clangd/index/: funciones.cpp.FF3C2585CCFCD42B.idx  funciones.hpp.68079688665C05D8.idx  funciones.hpp.D94812ACFEE73EFA.idx  part1.cpp.57293CDF396B971E.idx  part2.cpp.6D162DF2B2F083C5.idx  test.cpp.62F6963B1B435F66.idx  test.cpp.D8454DC683379260.idx
day2/include/: funciones.hpp
day2/src/: funciones.cpp  part1.cpp  part2.cpp  test.cpp
day3/: part1.py
day4/: day4.py
day5/: part1.py
day6/: day6.py
day7/: part1.py  part2.py
day8/: day8.py
day9/: day9.py
plantilla/: CMakeLists.txt
plantilla/.cache/clangd/index/: funciones.cpp.128984AFEE06AFA0.idx  part1.cpp.48AFC6C099FC5E11.idx  test.cpp.62F6963B1B435F66.idx
plantilla/include/: funciones.hpp
plantilla/src/: funciones.cpp  part1.cpp  test.cpp
